--- a/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-review/user-review.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-review/user-review.component.html
@@ -1,5 +1,6 @@
 <kt-portlet>
-    <kt-modal-header *ngIf="!viewOnly" [title]='"KYC Details"' (action)="action()"></kt-modal-header>
+    <kt-modal-header *ngIf="!viewOnly" [title]='"KYC Details"' [noTitleCase]="true" (action)="action()">
+    </kt-modal-header>
     <kt-portlet-body>
         <div *ngIf="data">
             <form [formGroup]=reviewForm>
