--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/interest-calculator/interest-calculator.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/interest-calculator/interest-calculator.component.html
@@ -149,7 +149,7 @@
                     <div class="col-7">
                         <select class="form-control" formControlName="paymentFrequency" (change)="getIntrest()"
                             [class.isError]="controls.paymentFrequency.touched && controls.paymentFrequency.invalid">
-                            <option value="" [selected]="true" [disabled]="true">Select Repay Period</option>
+                            <option value="" [selected]="true" [disabled]="true">Select Payment Frequency</option>
                             <option [value]="pay.value" *ngFor="let pay of repayType">{{pay.name | titlecase}}</option>
                         </select>
                         <mat-error
