--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/upload-packets/upload-packets.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/upload-packets/upload-packets.component.html
@@ -75,11 +75,11 @@
             (click)="webcam(idx,$event,'emptyPacketWithNoOrnament')">
             <img class="placeholder" src="../../../../../assets/media/icons/image-placeholder.png" alt="">
         </div>
-        <img class="packets position-relative" [src]="packetImg.controls.emptyPacketWithNoOrnament.value"
+        <img class="packets position-relative" [src]="packetImg.controls.emptyPacketWithNoOrnamentData.value"
             *ngIf="packetImg.controls.emptyPacketWithNoOrnament.value">
         <img *ngIf="packetImg.controls.emptyPacketWithNoOrnament.value && url != 'view-loan'"
             src="../../../../../assets/media/icons/edit.svg" alt="" class="kt-pointer edit-icon"
-            (click)="webcam(idx,$event,'emptyPacketWithNoOrnament')">
+            (click)="webcam(idx,$event,'emptyPacketWithNoOrnament','emptyPacketWithNoOrnamentData')">
         <label class="text-center w-100 font-weight-500 pacekts-label text-gray">Empty Packet(s) with all ornaments</label>
         <div>
             <mat-error
@@ -94,11 +94,11 @@
             (click)="webcam(idx,$event,'sealingPacketWithWeight')">
             <img class="placeholder" src="../../../../../assets/media/icons/image-placeholder.png" alt="">
         </div>
-        <img class="packets position-relative" [src]="packetImg.controls.sealingPacketWithWeight.value"
+        <img class="packets position-relative" [src]="packetImg.controls.sealingPacketWithWeightData.value"
             *ngIf="packetImg.controls.sealingPacketWithWeight.value">
         <img *ngIf="packetImg.controls.sealingPacketWithWeight.value && url != 'view-loan'"
             src="../../../../../assets/media/icons/edit.svg" alt="" class="kt-pointer edit-icon"
-            (click)="webcam(idx,$event,'sealingPacketWithWeight')">
+            (click)="webcam(idx,$event,'sealingPacketWithWeight','sealingPacketWithWeightData')">
         <label class="text-center w-100 font-weight-500 pacekts-label text-gray"> Sealed Packet(s) with weight</label>
         <div>
             <mat-error
@@ -113,11 +113,11 @@
             (click)="webcam(idx,$event,'sealingPacketWithCustomer')">
             <img class="placeholder" src="../../../../../assets/media/icons/image-placeholder.png" alt="">
         </div>
-        <img class="packets position-relative" [src]="packetImg.controls.sealingPacketWithCustomer.value"
+        <img class="packets position-relative" [src]="packetImg.controls.sealingPacketWithCustomerData.value"
             *ngIf="packetImg.controls.sealingPacketWithCustomer.value">
         <img *ngIf="packetImg.controls.sealingPacketWithCustomer.value && url != 'view-loan'"
             src="../../../../../assets/media/icons/edit.svg" alt="" class="kt-pointer edit-icon"
-            (click)="webcam(idx,$event,'sealingPacketWithCustomer')">
+            (click)="webcam(idx,$event,'sealingPacketWithCustomer','sealingPacketWithCustomerData')">
         <label class="text-center w-100 font-weight-500 pacekts-label text-gray"> Sealed packet(s) with customer</label>
         <div>
             <mat-error
